--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -2,15 +2,29 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "17746a0e",
    "metadata": {},
    "source": [
-    "# Data Science Tools and Ecosystem\n"
+    "<center>\n",
+    "    <img src=\"https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-DS0105EN-SkillsNetwork/labs/Module2/images/SN_web_lightmode.png\" width=\"300\" alt=\"cognitiveclass.ai logo\">\n",
+    "</center>\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b7b14e73",
+   "metadata": {},
+   "source": [
+    "#### Add your code below following the instructions given in the course\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Science Tools and Ecosystem"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "In this notebook, Data Science Tools and Ecosystem are summarized."
@@ -18,52 +32,48 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ff17c38",
    "metadata": {},
    "source": [
     "**Objectives:**\n",
     "- Popular languages used by Data Scientists\n",
-    "- Libraries used by Data Scientists\n",
-    "- Data Science Tools\n"
+    "- Libraries most used by Data Scientists\n",
+    "- Data Science Tools"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "49a1c610",
    "metadata": {},
    "source": [
     "Some of the popular languages that Data Scientists use are:\n",
     "1. Python\n",
     "1. Julia\n",
-    "1. Java\n"
+    "1. Java"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1a0d9c51",
    "metadata": {},
    "source": [
     "Some of the commonly used libraries used by Data Scientists include:\n",
-    "1. Numpy\n",
+    "\n",
     "1. Pandas\n",
-    "1. Matplotlib"
+    "1. ScyPy\n",
+    "1. Numpy"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fbb51764",
    "metadata": {},
    "source": [
     "| Data Science Tools |\n",
     "|--------------------|\n",
-    "| Jupyter Notebook   |\n",
-    "| RStudio            |\n",
-    "| VS Code            |"
+    "| Jupyter notebook   |\n",
+    "| PyCharm            |\n",
+    "| VsCode             |"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "52d65b98",
    "metadata": {},
    "source": [
     "### Below are a few examples of evaluating arithmetic expressions in Python."
@@ -71,8 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "c88c8160",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -81,49 +90,46 @@
        "17"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# his a simple arithmetic expression to mutiply then add integers\n",
-    "(3 * 4 + 5)"
+    "# This a simple arithmetic expression to mutiply then add integers\n",
+    "( 3 * 4 ) + 5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "69d11de5",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Convert 200 to minutes is 3.3333333333333335 minutes \n"
+      "200 converted to minutes is 3.3333333333333335\n"
      ]
     }
    ],
    "source": [
     "# This will convert 200 minutes to hours by diving by 60\n",
     "h = 200\n",
-    "print(f\"Convert {h} to minutes is {h / 60} minutes \")\n"
+    "print(f'{h} converted to minutes is {h/60}')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "cbdcb395",
    "metadata": {},
    "source": [
     "## Author\n",
-    "Cosme Nizzo\n"
+    "Cosme Nizzo"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d214c095",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -149,5 +155,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 4
 }
